...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#666666"
            android:textSize="13sp" />

        <Button
            android:id="@+id/addEventBtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:backgroundTint="#0F9D58"
            android:text="@string/add_event"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
...
